--- a/todo
+++ b/todo
@@ -9,3 +9,10 @@ STYLES:
 DOCS:
 TEST:
 MERGE:
+
+-------------------------------
+Camaras UI
+Busqueda
+Paginacion
+CRUD
+https://medium.com/flawless-app-stories/designers-guide-to-user-data-and-crud-4e53f7c5150d
